src2/objects/Related_Knowledge_Articles__c.object
<CustomObject>
    <fields>
        <fullName>Article_Version__c</fullName>
        <formula>TEXT(Knowledge__r.VersionNumber)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Article Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Knowledge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Knowledge</label>
        <referenceTo>Knowledge__kav</referenceTo>
        <relationshipLabel>Related Knowledge Articles</relationshipLabel>
        <relationshipName>Related_Knowledge_Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purpose_Of_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purpose Of Contact</label>
        <referenceTo>Case_Reason__c</referenceTo>
        <relationshipLabel>Related Knowledge Articles</relationshipLabel>
        <relationshipName>Related_Knowledge_Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Related Knowledge Articles</label>
    <nameField>
        <label>Related Knowledge Articles Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related Knowledge Articles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>